[tool.poetry]
name = "weather_message"
version = "0.1.0"
description = "A weather app that gathers weekly weather data and formats a message to be sent out."
authors = ["Austin Nieset <ajnieset@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
